--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -1,39 +1,44 @@
 name: "Feature Request"
 description: "Suggest an idea for the project"
 title: "[FEAT]: "
-labels: ["feat"]
+labels: ["enhancement"]
 # labels: ["feat", "enhancement"]
 assignees: []
 body:
   - type: textarea
     id: "problem"
-    attributes:
-      label: "Is your feature request related to a problem? Please describe. (Provide a link to the issue if there's already one open using `#<number>`)"
-      description: "A clear and concise description of what the problem is."
-      placeholder: "ex. I'm always frustrated when [...]"
     validations:
       required: true
+    attributes:
+      label: |
+        Is your feature request related to a problem?
+        Please describe.
+      description: |
+        A clear and concise description of what the problem is.
+        Provide a link to the issue if there's already one open using `#<number>`
+      placeholder: "ex: I'm always frustrated when [...]"
   - type: textarea
     id: "solution"
+    validations:
+      required: true
     attributes:
       label: "Describe the solution you'd like"
       description: "A clear and concise description of what you want to happen."
-      placeholder: "ex. It would be great if [...]"
-    validations:
-      required: true
+      placeholder: "ex: It would be great if [...]"
   - type: textarea
     id: "alternatives"
+    validations:
+      required: true
     attributes:
       label: "Describe alternatives you've considered"
       description: "A clear and concise description of any alternative solutions or features you've considered."
-      placeholder: "ex. I thought about using [...] but [...]"
-    validations:
-      required: true
+      placeholder: "ex: I considered [...] but didn't choose it because [...]"
   - type: textarea
     id: "context"
+    validations:
+      required: false
     attributes:
       label: "Additional context"
       description: "Add any other context or screenshots about the feature request here."
-      placeholder: "ex. Links, images, or more details."
-    validations:
-      required: false
+      placeholder: "ex: Links, images, or more details."
+      value: "N/A"
