--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,9 @@ optional = false
 version = "0.3.20"
 optional = false
 
+[dev-dependencies]
+tempfile = "3.8"
+
 [target.'cfg(unix)'.dependencies.nix]
 version = "0.28.0"
 features = ["signal"]
